--- a/2015_16/13_downhill_simplex/13_downhill_simplex.tex
+++ b/2015_16/13_downhill_simplex/13_downhill_simplex.tex
@@ -23,13 +23,15 @@
 
 \subsection*{13 - downhill simplex}
 
-Another broad category of algorithms relate to optimization. These are
-frequently of use in problems where computer scientists are working
-with people from other disciplines rather than working on problems
-that arise out of computer science itself and to an even greater
-extent than the data-based algorithms, their performance is difficult
-to assess abstractly, optmization algorithms must be assessed in the
-context of the particular problem they are intended to solve.
+Along with the data-based algorithms like searching and sorting,
+another broad category of algorithms relates to optimization. These
+are frequently of use in problems where computer scientists are
+working with people from other disciplines rather than working on
+problems that arise out of computer science itself. To an even greater
+extent than the data-based algorithms, the performance of optimization
+algorithms is difficult to assess abstractly, optmization algorithms
+must be assessed in the context of the particular problem they are
+intended to solve.
 
 In a typical optimization problem the goal is to minimize some
 function, $E$ that depends on lots of parameters, so $E(\mathbf{x})$ where
@@ -40,36 +42,38 @@ $E$ is often called an objective function.
 
 This situation applies in a diversity of situations. In physics $E$
 might be an energy function related to the configuration of a
-mechanical system or, for a particle physicist, a configuation of
-fields like the electromagnetic field or its generalizations. For
-someone working on machine learning it might measure the error made by
-a neural network, in this situation $E$ is called an error function
-and $\mathbf{x}$ are the parameters describing the neural network. In
-statistics $E$ might be the log-liklihood, a measure of how well a
-stastical model predicts the data. In neuroscience, the model might be
-a computational model of a neuron or synapse and $\mathbf{x}$ would
-correspond to the components of that model, for example the number of
+mechanical system with $\mathbf{x}$ representing the positions of the
+components, or, for a particle physicist, a configuation of fields
+like the electromagnetic field or its generalizations with
+$\mathbf{x}$ representing field values. For someone working on machine
+learning it might measure the error made by a neural network, in this
+situation $E$ is called an error function and $\mathbf{x}$ are the
+parameters describing the neural network. In statistics $E$ might be
+the log-liklihood, a measure of how well a stastical model predicts
+the data. In neuroscience, the model might be a computational model of
+a neuron or synapse and $\mathbf{x}$ would correspond to the
+components of that model, for example the number of each of the
 different types of ion gates. In this example optimizating the model
 to fit electro-physiological recording will predict the composition of
-the neuron or synapse. 
+the neuron or synapse.
 
 In any case, the idea is to find the value fo $\mathbf{x}$ that gives
 the lowest value of $E(\mathbf{x})$. The best way of doing this
 depends on the dimension of $\mathbf{x}$, on how much is known about
-$E$, on its properties and how easy it is to calculate. For example,
-the hardest optimization problems are often ones where $E$ has many
-local minima so that optimation algorithms end up finding these and
-missing the global minimum. This isn't a problem we are going to
-discuss here.
-
+$E$, on its properties and how easy it is to calculate. The hardest
+optimization problems are often ones where $E$ has many local minima
+so that optimation algorithms end up finding these and missing the
+global minimum. This isn't a problem we are going to discuss here.
 
 \subsubsection*{Some optimatization algorithms}
 
-Obivously we know the functional form of $E$ we can find its minimum using calculus. For example, say
+Obivously we know the functional form of $E$ we can find its minimum
+using calculus. For example, say
 \begin{equation}
 E(x_1,x_2)=(1-x_1)^2+100(x_2-x_1^2)^2
 \end{equation}
-we would calculate the two partial derivatives and setting them to zero
+we would calculate the two partial derivatives and then find the
+optimum point by setting them to zero, so
 \begin{equation}
 \begin{aligned}
 0&=\frac{\partial E}{\partial x_1}=2(1-x_1)-400x_1(x_2-x_1^2)\\
@@ -83,19 +87,21 @@ itself must be calculated numerically for a given value of
 $\mathbf{x}$.
 
 Another approach might be to divide the space of $\mathbf{x}$ values
-up into a grid and check them all; this is known as grid-search and is
-sometimes the best method for problems where $\mathbf{x}$ has only a
-small number of dimensions and $E$ is very quick to
-calculated. However, because the number of grid points is very large,
+up into a grid and to check them all; this is known as grid-search and
+is sometimes the best method for problems where $\mathbf{x}$ has only
+a small number of dimensions and $E$ is very quick to
+calculated. However, $E$ might be slow to calculated, for example, in
+neuroscience examples, the model might take a while to
+run. Furthermore, the number of grid points may be very large,
 particularly if the variability of $E$ means the grid has to be fine,
 or if the number of dimensions is not small, grid search can be
 impractical or out of the question.
 
-Another popular set of methods are related to gradient
-descent. Roughly speaking this involves working out what direction is
-down and heading that way. The gradient is a vector pointing in the
-direction $E$ increases most, the simplest gradient method is to start
-at an initial value $\mathbf{x}_0$ and iterate
+Another popular set of methods is related to gradient descent. Roughly
+speaking this involves working out which direction is down and heading
+that way. The gradient is a vector pointing in the direction $E$
+increases most, the simplest gradient method is to start at an initial
+value $\mathbf{x}_0$ and iterate
 \begin{equation}
 \mathbf{x}_{n+1}=\mathbf{x}_n-\eta \mathbf{\nabla}E
 \end{equation}
@@ -105,7 +111,9 @@ worked out using calculus, and even in situations where $E$ has to be
 calculated numerically it may be possible to find a similar numerical
 scheme to calculate the gradient. This is often the case for error
 functions in machine learning, for example. However, it is not always
-the case that the gradient can be easily estimated.
+the case that the gradient can be easily estimated; in examples coming
+for neuroscience, for example, the models are highly non-linear and
+there is no easy way to find the gradient.
 
 Even if the gradient is known, gradient descent methods can be
 tricky. One problem is with the size of $\eta$: the scale of the $E$
@@ -115,8 +123,8 @@ long steps, but near the minimum the features become much finer, so
 small steps are needed. If $\eta$ is too small the method spends for
 ages taking tiny steps down the hill side, if it is too big it steps
 right over important features at the bottom. Another problem is with
-thin valleys, if the step size is too large then it successive steps
-oscillate backwards and forwards across the valley rather than
+thin valleys, if the step size is too large then often successive
+steps oscillate backwards and forwards across the valley rather than
 following it down to the minimum. There are solutions to these
 problems, for example the method called conjugate gradients seeks to
 choose the successive steps to follow the gradient but to avoid the
@@ -133,7 +141,6 @@ learn too much about the properties of the objective function; in
 other words, it is often the quickest way to solve the problem if you
 include the researchers time along with the time it takes to run. It
 also does not require gradient information.
-
 
 \begin{figure}
 \begin{center}
@@ -154,14 +161,13 @@ at (2.5,4.33); \node[draw=red](x1n) at (x1) {$x_1$};
   E(\mathbf{x}_{n+1})$.\label{fig:simplex}}
 \end{figure}
 
-
 A simplex is a generalization of a triangle, just as a triangle is
 defined in two-dimensional space and has three vertices and a
 tetrahedron is defined in three-dimensional space and have four
 vertices, a $n$-dimensional simplex has $n+1$-vertices. It is not
-regular, the distances between the vertices need not be the same, but
-there is required that it isn't flat: if you remove one vertex the
-remaining $n$ vertices are linearly independent.
+regular in general, the distances between the vertices need not be the
+same, but there is required that it isn't flat: if you remove one
+vertex the remaining $n$ vertices should be linearly independent.
 
 Now the idea of downhill simplex is that a simplex kind of ooches
 around looking for the minimum. It does this, roughly speaking, by
@@ -169,7 +175,6 @@ taking the worst vertex, the one with the largest value of $E$, and
 replacing it with a better one. There are a number of different
 operations that achieve this, which is used depends on the precise
 situation.
-
 
 \begin{figure}
 \begin{center}
@@ -198,14 +203,15 @@ situation.
   of the other points.\label{fig:reflection}}
 \end{figure}
 
-
 For simplicity lets imagine the vertices are in order according to the
 objective function, so
 \begin{equation}
 E(\mathbf{x}_1)\le E(\mathbf{x}_2)\le \ldots \le E(\mathbf{x}_{n+1})
 \end{equation}
-The idea generally is to replace $\mathbf{x}_{n+1}$. It is useful to
-define the center of the remaining points:
+This order is done at the start of each iteration, though obvious in
+doesn't involve renumber, that is just done here for notational
+convenience. The idea generally is to replace $\mathbf{x}_{n+1}$. It
+is useful to define the center of the remaining points:
 \begin{equation}
 \mathbf{x}_o=\frac{1}{n}\sum_{i=1}^n\mathbf{x}_i
 \end{equation}
@@ -215,19 +221,22 @@ remaining points is
 \begin{equation}
 \mathbf{x}_r=\mathbf{x}_o+(\mathbf{x}_o-\mathbf{x}_{n+1})
 \end{equation}
-Often this will be a sort of reasonable point so that if it replaced $\mathbf{x}_{n+1}$ it would not be the best nor the worst, so
+Often this will be a sort of reasonable point so that if it replaced
+$\mathbf{x}_{n+1}$ it would not be the best nor the worst, that is
 \begin{equation}
 E(\mathbf{x}_1)\le E(\mathbf{x}_r < E(\mathbf{x}_n)
 \end{equation}
-In this case use it to replace $\mathbf{x}_{n+1}$:
+In this case use it is used to replace $\mathbf{x}_{n+1}$:
 \begin{equation}
 \mathbf{x}_{n+1}\leftarrow \mathbf{x}_r
 \end{equation}
-and then work out the new order of the points and repeat. This is called reflection and is shown in Fig.\ref{fig:reflection}.
+and then the algorithm progresses by working out the new order of the
+points and repeating. This is called reflection and is shown in
+Fig.\ref{fig:reflection}.
 
-Reflection is the most common case, but there are others. For example,
-the reflected point $x_r$ might be better than any of the existing
-points, so
+Reflection is the most common case, but there are others. The
+reflected point $x_r$ might be better all of the existing points,
+so
 \begin{equation}
 E(\mathbf{x}_r)<E(\mathbf{x}_1)
 \end{equation}
@@ -247,10 +256,9 @@ as before. The expansion point is illustrated in
 Fig.~\ref{fig:refexp}. One advantage of expansion is that it makes the
 simplex bigger; since going from the reflection point to the expansion
 point gives an even lower value of the objective function it seems
-that where the simplex is the relevant features of the landscape are
-larger than the simplex. This is one advantage of the simplex
-approach, the size of the simplex changes to match scale of detail in
-the landscape.
+that the relevant features of the landscape are larger than the
+simplex. This is one advantage of the simplex approach, the size of
+the simplex changes to match scale of detail in the landscape.
 
 \begin{figure}
 \begin{center}
@@ -317,15 +325,16 @@ the landscape.
   direction to give $\mathbf{x}_e$\label{fig:refexp} }
 \end{figure}
 
-Another possibility is that changing the worst point to the reflection
-point would not prevent it from being the worst point, so
+Another possibility is that the reflection
+point would be the worst point
 \begin{equation}
 E(\mathbf{x}_r)>E(\mathbf{x}_n)
 \end{equation}
 Replacing $x_{n+1}$ with $x_r$ in this situation would lead to
 wasteful repeative moves. It also implies that the simplex is too big,
 reflecting the worst point causes it to skip over a region where there
-are lower values of the objective function. As such a new point is defined, the contraction points
+are lower values of the objective function. As such a new point is
+defined, the contraction point
 \begin{equation}
 \mathbf{x}_c=\mathbf{x}_o-(\mathbf{x}_o-\mathbf{x}_{n+1})/2
 \end{equation}
@@ -343,7 +352,7 @@ Reduction and contraction are both illustrated in
 Fig.~\ref{fig:conred} and a flow chart for the whole algorithm is
 given in Fig.~\ref{fig:flowchart}.
 
-Obviously after any of these moves the points are reorder and the
+Obviously after any of these moves the points are reordered and the
 algorithm repeats. However, practically, a stopping criterion needs to
 be devised. This usually says that the algorithm stops when the
 simplex vertices have values of the objective function that are
